--- a/README
+++ b/README
@@ -1,6 +1,18 @@
 
 This repository is a library of common data structures for the ethereum haskell project.
 
+Indexing recommendations:
+Run psql eth while ethereumH is populating the database and
+
+CREATE INDEX CONCURRENTLY ON block_data_ref (number);
+CREATE INDEX CONCURRENTLY ON block_data_ref (hash);
+
+CREATE INDEX CONCURRENTLY ON address_state_ref (address);
+
+CREATE INDEX CONCURRENTLY ON raw_transaction (from_address);
+CREATE INDEX CONCURRENTLY ON raw_transaction (to_address));
+
+
 
 
 
