--- a/README
+++ b/README
@@ -4,14 +4,16 @@ This repository is a library of common data structures for the ethereum haskell 
 Indexing recommendations:
 Run psql eth while ethereumH is populating the database and
 
+CREATE INDEX CONCURRENTLY ON block_data_ref (block_id);
 CREATE INDEX CONCURRENTLY ON block_data_ref (number);
 CREATE INDEX CONCURRENTLY ON block_data_ref (hash);
 
 CREATE INDEX CONCURRENTLY ON address_state_ref (address);
 
 CREATE INDEX CONCURRENTLY ON raw_transaction (from_address);
-CREATE INDEX CONCURRENTLY ON raw_transaction (to_address));
-
+CREATE INDEX CONCURRENTLY ON raw_transaction (to_address);
+CREATE INDEX CONCURRENTLY ON raw_transaction (block_id);
+ 
 
 
 
