--- a/README
+++ b/README
@@ -9,6 +9,7 @@ CREATE INDEX CONCURRENTLY ON block_data_ref (number);
 CREATE INDEX CONCURRENTLY ON block_data_ref (hash);
 CREATE INDEX CONCURRENTLY ON block_data_ref (parent_hash);
 CREATE INDEX CONCURRENTLY ON block_data_ref (coinbase);
+CREATE INDEX CONCURRENTLY ON block_data_ref (total_difficulty);
 
 CREATE INDEX CONCURRENTLY ON address_state_ref (address);
 
